rnsc/test_data/integration/error/parser/type_hints/float/trailing_tokens.rns
.class @float 3.14 unexpected_second_operand
.super java/lang/Object
